move explanation and mutability change to other method